<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        style="@style/default_style.red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/necessary_field" />

    <TextView
        android:id="@+id/enterusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_user_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/enterusernameeditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/enterpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/enterpasswordeditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/enterphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_phone"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/enterphoneeditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textView2"
        style="@style/default_style.noti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noti_pin2" />

    <TextView
        android:id="@+id/enter_pin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_pin2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/enter_pin2_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </EditText>

    <TextView
        android:id="@+id/textView3"
        style="@style/default_style.noti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noti_pin" />

    <TextView
        android:id="@+id/enter_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_pin"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/backregister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back" />

        <Button
            android:id="@+id/check_mobile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register" />
    </TableRow>

</LinearLayout>