<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        style="@style/default_style.red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/necessary_field" />

    <TextView
        android:id="@+id/entername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/enternameeditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/add_item_profile_picture_product_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_picture_user" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/add_item_chose_photo_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="listener"
            android:text="@string/browse" />

        <TextView
            android:id="@+id/chose_photo_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TextView
        android:id="@+id/enteraddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/enteraddresseditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress" />

    <TextView
        android:id="@+id/enterphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_phone"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/enterphoneeditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/backregister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="listener"
            android:text="@string/back" />

        <Button
            android:id="@+id/registernext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="listener"
            android:text="@string/next" />
    </TableRow>

</LinearLayout>