<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        style="@style/default_style.red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/necessary_field" />

    <TextView
        android:id="@+id/enter_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_pin"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        style="@style/default_style.red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noti_pin" />

    <EditText
        android:id="@+id/enter_pin_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/reenter_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reenter_pin"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/reenter_pin_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/backregister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="listener"
            android:text="@string/back" />

        <Button
            android:id="@+id/registerregister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="listener"
            android:text="@string/register" />
    </TableRow>

</LinearLayout>