<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        style="@style/default_style.red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/necessary_field" />

    <TextView
        android:id="@+id/entertitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/add_item_entertitle_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none" />

    <TextView
        android:id="@+id/add_item_profile_picture_product_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_picture_product" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/add_item_chose_photo_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="listener"
            android:text="@string/browse" />

        <TextView
            android:id="@+id/chose_photo_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_details"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/add_item_enter_details_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_price"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/add_item_enter_price_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_number_prod"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/add_item_enter_number_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

    </EditText>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/add_item_back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="listener"
            android:text="@string/back" />

        <Button
            android:id="@+id/add_item_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="listener"
            android:text="@string/next" />
    </TableRow>

</LinearLayout>